# VERDICT

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
attribution/: __init__.py  coiba_adapter.py  layer_attribution.py  token_attribution.py  visualisation.py
baselines/: __init__.py  attention_calibration.py  utils.py  visual_evidence.py
configs/: base_config.yaml  baseline_config.yaml  coiba_config.yaml  maira2_config.yaml
data/: __init__.py  mimic_cxr.py  preprocessing.py  transforms.py
evaluation/: __init__.py  lines_tubes_eval.py  metrics.py  pope_eval.py
experiments/: __init__.py  generate_attributions.py  run_evaluation.py  train_baseline.py
models/: __init__.py  language_decoder.py  maira2_wrapper.py  vision_encoder.py
notebooks/: 01_data_exploration.ipynb  02_model_inference.ipynb  03_attribution_analysis.ipynb
scripts/: download_data.sh  run_experiments.sh  setup_environment.sh
tests/: __init__.py  conftest.py  test_attribution.py  test_coiba.py  test_data.py  test_models.py
utils/: __init__.py  config_loader.py  logging_utils.py  seed.py
